--- a/config/nginx/conf.d.dev/dev.conf
+++ b/config/nginx/conf.d.dev/dev.conf
@@ -19,7 +19,7 @@ server {
         alias /opt/services/store-backend/back_media/;
     }
 
-    location ~ ^/(admin/|api/){
+    location ~ ^/(admin/|api/|docs/|html/|swagger/|redoc/){
       proxy_pass http://store_ws;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
